--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -2,9 +2,9 @@ name: Snyk Security Scan
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ master ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ master ]
 
 jobs:
   snyk-scan:
