chore: drop spot bugs, using pmd only

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   static-analysis:
-    name: Run Static Code Analysis
+    name: Run Static Code Analysis with PMD
     runs-on: ubuntu-latest
 
     steps:
@@ -21,28 +21,25 @@ jobs:
           echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
           echo "Starting static code analysis process 🔍"
 
-      - name: Install Java
+      - name: Install Java and PMD
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk
+          wget https://github.com/pmd/pmd/releases/download/pmd_releases/6.46.0/pmd-bin-6.46.0.zip
+          unzip pmd-bin-6.46.0.zip
+          sudo mv pmd-bin-6.46.0 /opt/pmd
+          echo "PMD installed successfully."
 
-      - name: Install SpotBugs
+      - name: Run PMD static analysis
         run: |
-          wget https://github.com/spotbugs/spotbugs/releases/download/spotbugs-4.6.0/spotbugs-4.6.0.tar.gz
-          tar -xvzf spotbugs-4.6.0.tar.gz
-          sudo mv spotbugs-4.6.0 /opt/spotbugs
-          echo "SpotBugs installed successfully."
+          echo "Running PMD static code analysis"
+          /opt/pmd/bin/run.sh pmd -d . -R rulesets/java/quickstart.xml -f text
 
-      - name: Run SpotBugs analysis (without Maven)
-        run: |
-          echo "Running SpotBugs analysis"
-          /opt/spotbugs/bin/spotbugs -textui -effort:max -low -recursive .
-
-      - name: Echo - SpotBugs analysis complete
-        run: echo "🎉 SpotBugs analysis complete 🎉"
+      - name: Echo - Static analysis complete
+        run: echo "🎉 PMD static analysis complete 🎉"
 
   code-metrics:
-    name: Run Code Metrics Analysis
+    name: Run Code Metrics Analysis with PMD
     runs-on: ubuntu-latest
 
     steps:
@@ -64,10 +61,10 @@ jobs:
           sudo mv pmd-bin-6.46.0 /opt/pmd
           echo "PMD installed successfully."
 
-      - name: Run PMD metrics analysis (without Maven)
+      - name: Run PMD code metrics analysis
         run: |
           echo "Running PMD metrics analysis"
-          /opt/pmd/bin/run.sh pmd -d . -R rulesets/java/quickstart.xml -f text
+          /opt/pmd/bin/run.sh pmd -d . -R rulesets/java/metrics.xml -f text
 
       - name: Echo - PMD metrics analysis complete
-        run: echo "PMD metrics analysis complete."
+        run: echo "🎉 PMD metrics analysis complete 🎉"
