chore: remove run pipe into echo checkout code

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,35 +6,36 @@ on:
   pull_request:
     branches: [ master ]
 
-
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      run: |
-        echo "🔄 Checking out the code..."
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Setup JDK
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-      run: |
-        echo "Setting up JDK 11..."
+      - name: Echo - Checking out code
+        run: echo "🔄 Checking out the code..."
 
-    - name: Install Checkstyle
-      run: |
-        echo "Downloading Checkstyle jar..."
-        wget https://github.com/checkstyle/checkstyle/releases/download/checkstyle-8.45/checkstyle-8.45-all.jar
-        echo "Creating directory for Checkstyle..."
-        mkdir -p $HOME/checkstyle
-        echo "Moving Checkstyle jar to the directory..."
-        mv checkstyle-8.45-all.jar $HOME/checkstyle/
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
 
-    - name: Run Checkstyle
-      run: |
-        echo "⚙️ Running Checkstyle on the code..."
-        java -jar $HOME/checkstyle/checkstyle-8.45-all.jar -c checkstyle.xml src/main/java
-        echo "✅ Checkstyle finished running!"
+      - name: Echo - JDK setup complete
+        run: echo "☕ JDK 11 is ready."
+
+      - name: Install Checkstyle
+        run: |
+          echo "Downloading Checkstyle jar..."
+          wget https://github.com/checkstyle/checkstyle/releases/download/checkstyle-8.45/checkstyle-8.45-all.jar
+          echo "Creating directory for Checkstyle..."
+          mkdir -p $HOME/checkstyle
+          echo "Moving Checkstyle jar to the directory..."
+          mv checkstyle-8.45-all.jar $HOME/checkstyle/
+
+      - name: Run Checkstyle
+        run: |
+          echo "⚙️ Running Checkstyle on the code..."
+          java -jar $HOME/checkstyle/checkstyle-8.45-all.jar -c checkstyle.xml src/main/java
+          echo "✅ Checkstyle finished running!"
