--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -39,11 +39,14 @@ jobs:
         run: |
           echo "⚙️ Running CK metrics analysis on the code..."
           mkdir -p ck-output
-          java -jar ck/target/ck-*-SNAPSHOT-jar-with-dependencies.jar src/main/java false 0 > ck-output/ck-metrics.csv
+          # Run the CK analysis and redirect output to different CSV files
+          java -jar ck/target/ck-*-SNAPSHOT-jar-with-dependencies.jar src/main/java false 0
+          # Assuming that CK generates class.csv, field.csv, method.csv, and variable.csv in ck-output
+          mv ck/*.csv ck-output/
           echo "✅ CK metrics analysis finished!"
 
-      - name: Upload CK Metrics CSV
+      - name: Upload CK Metrics CSVs
         uses: actions/upload-artifact@v3
         with:
           name: ck-metrics
-          path: ck-output/ck-metrics.csv
+          path: ck-output/*.csv 
